crates/solidity/testing/snapshots/bindings_output/contracts/fallback_receive/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts (crates/solidity/outputs/cargo/tests/src/bindings_output/runner.rs). Please don't edit by hand.

Parse errors:
Error: Expected ConstantKeyword or Identifier or InternalKeyword or PrivateKeyword or PublicKeyword.
    ╭─[input.sol:5:13]
    │
  5 │ ╭─▶     fallback(bytes calldata input) external payable returns (bytes memory output) {
    ┆ ┆   
 12 │ ├─▶     }
    │ │           
    │ ╰─────────── Error occurred here.
────╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Fallback {
   │          ────┬───  
   │              ╰───── name: 1
 2 │     event Log(string func, uint256 gas);
   │           ─┬─        ──┬─          ─┬─  
   │            ╰──────────────────────────── name: 2
   │                        │            │   
   │                        ╰──────────────── name: 3
   │                                     │   
   │                                     ╰─── name: 4
 3 │     uint status;
   │          ───┬──  
   │             ╰──── name: 5
   │ 
 5 │     fallback(bytes calldata input) external payable returns (bytes memory output) {
   │     ────┬───  
   │         ╰───── unresolved
───╯
Definiens: 
    ╭─[input.sol:1:1]
    │
  1 │ ╭─▶ contract Fallback {
  2 │ │       event Log(string func, uint256 gas);
    │ │   ───────────────────┬┬───────────┬────────  
    │ │                      ╰─────────────────────── definiens: 3
    │ │                       │           │          
    │ │                       ╰────────────────────── definiens: 2
    │ │                                   │          
    │ │                                   ╰────────── definiens: 4
  3 │ │       uint status;
    │ │   ────────┬────────  
    │ │           ╰────────── definiens: 5
    ┆ ┆   
 13 │ ├─▶ }
    │ │       
    │ ╰─────── definiens: 1
────╯
